--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".StarDetailActivity" android:label="星座详情">
 
         </activity>
+        <activity android:name=".SelStarActivity" android:label="选择星座详情"  android:theme="@android:style/Theme.Dialog"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
